<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Contactanos">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Contacto_form"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="45dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Puedes contactarnos por medio de:"
            android:textAlignment="center"
            android:textSize="27dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="115dp">

        <Button
            android:id="@+id/BtnCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Telefono_Celular"></Button>

        <Button
            android:id="@+id/BtnCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"></Button>

        <Button
            android:id="@+id/BtnUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ubicación"></Button>
    </LinearLayout>

</FrameLayout>